fixing cropped shadow in  mobile safari in horizontal orientation

--- a/style/style.less
+++ b/style/style.less
@@ -73,7 +73,7 @@ h1 {
   position: relative;
   overflow: hidden;
   width: @width;
-  margin: 0 auto;
+  margin: 0 auto 8px;
   box-shadow:
     inset 0 0 20px rgba(255, 255, 255, .2),
     0 1px 0 @bb,
